# Route-Yolov8

./: CMakeLists.txt  README.md  package.xml
cfg/: YoloDetect.cfg
launch/: yolov8_detector.launch
scripts/: ._detect.py  detect.py
